// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex.vue props align 1`] = `
<section
  class="cflex"
  style="--cflex-gap: initial; --cflex-align: flex-end; --cflex-justify: initial;"
>
  
  
</section>
`;

exports[`Flex.vue props center 1`] = `
<section
  class="cflex cflex--center"
  style="--cflex-gap: initial; --cflex-align: initial; --cflex-justify: initial;"
>
  
  
</section>
`;

exports[`Flex.vue props gap 1`] = `
<section
  class="cflex"
  style="--cflex-gap: 10px; --cflex-align: initial; --cflex-justify: initial;"
>
  
  
</section>
`;

exports[`Flex.vue props inline 1`] = `
<section
  class="cflex cflex--inline"
  style="--cflex-gap: initial; --cflex-align: initial; --cflex-justify: initial;"
>
  
  
</section>
`;

exports[`Flex.vue props justify 1`] = `
<section
  class="cflex"
  style="--cflex-gap: initial; --cflex-align: initial; --cflex-justify: center;"
>
  
  
</section>
`;

exports[`Flex.vue props vertical 1`] = `
<section
  class="cflex cflex--vertical"
  style="--cflex-gap: initial; --cflex-align: initial; --cflex-justify: initial;"
>
  
  
</section>
`;

exports[`Flex.vue slots default 1`] = `
<section
  class="cflex"
  style="--cflex-gap: initial; --cflex-align: initial; --cflex-justify: initial;"
>
  
  flex
  
</section>
`;
